customer list page is fixed height with overflow.

--- a/shop-ui/src/app/components/customers/customers-list/customers-list.component.scss
+++ b/shop-ui/src/app/components/customers/customers-list/customers-list.component.scss
@@ -66,3 +66,9 @@ tr.example-detail-row {
 .full-width {
   width: 100%;
 }
+
+.mat-paginator-sticky {
+  bottom: 0px;
+  position: sticky;
+  z-index: 10;
+}
